Added menu.html/css files. Tasted peudo-elements

--- a/CSS3/index.html
+++ b/CSS3/index.html
@@ -13,7 +13,7 @@
 			<a class="playfloat" href="pages/blocks.html">Blocks</a>
 			<a class="playfloat" href="pages/divblocks.html">divblocks</a>
 			<a class="playfloat" href="pages/links.html">Linkes</a>
-			<a class="playfloat" href="#">My new text</a>
+			<a class="playfloat" href="pages/menu.html">Menu</a>
 		</nav>
 	</header>
 <main>
