--- a/CSS3/pages/menu.html
+++ b/CSS3/pages/menu.html
@@ -5,19 +5,22 @@
 	<title>Artur Voshchanikin</title>
 <!-- 	<link rel="stylesheet" type="text/css" href="../reset.css"> -->
 	<link rel="stylesheet" type="text/css" href="../assets/stylesheets/main.css">
-	<link rel="stylesheet" type="text/css" href="../assets/stylesheets/links.css">
+	<link rel="stylesheet" type="text/css" href="../assets/stylesheets/menu.css">
 </head>
 <body>
 	<header>
 		<h1>
 			<a class="playfloat" href="../index.html">Artur Voshchanikin</a>
 		</h1>
-		<nav>
-			<a class="playfloat" href="blocks.html">Blocks</a>
-			<a class="playfloat" href="divblocks.html">Divblocks</a>
-			<a class="playfloat" href="links.html">Links</a>
-			<a class="playfloat" href="menu.html">Menu</a>
-			<a class="arrow" href="#">Continue Reading</a>
+		<input type="checkbox" id="toggle">
+		<label for="toggle">&#9776;</label>
+		<nav class="toggle01">
+			<ul>
+				<li><a class="playfloat" href="blocks.html">Blocks</a></li>
+				<li><a class="playfloat" href="divblocks.html">Divblocks</a></li>
+				<li><a class="playfloat" href="links.html">Links</a></li>
+				<li><a class="playfloat" href="menu.html">Menu</a></li>
+			</ul>
 		</nav>
 	</header>
 	  <section>
@@ -66,11 +69,38 @@
 		  		<p>Second level Paragraph in a div - div 2/3</p>
 		  	</div>
 		  <p>First level Paragraph in a div 1/4</p>
-		  <p>First level Paragraph in a div 1/4</p>
 	  </div>
-   <footer>
+	<table>
+		<thead>
+			<tr>
+				<th>Number</th>
+				<th>Player</th>
+				<th>Position</th>
+				<th>Height</th>
+				<th>Weight</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>8</td>
+				<td>Marco Belinelli</td>
+				<td>G</td>
+				<td>6-5</td>
+				<td>195</td>
+			</tr>
+			<tr>
+				<td>5</td>
+				<td>Carlos Boozer</td>
+				<td>F</td>
+				<td>6-9</td>
+				<td>266</td>
+			</tr>
+		</tbody>
+	</table>
+
+	<footer>
 		    <p><img src = "http://www.intro-webdesign.com/images/newlogo.png" alt = "logo"/> This page was created by your name &amp; Colleen van Lent.   To learn more about web design, visit <a href="http://www.intro-webdesign.com">Intro to Web Design</a>.</p>
-	  </footer>
+	</footer>
 
 </body>
 </html>
