Finish week_02 assessment. Added folder week_02 with all materials

--- a/CSS3/pages/links.html
+++ b/CSS3/pages/links.html
@@ -38,7 +38,7 @@
  	  <section>
 		    <h2>More About Me</h2>
 		    <details open><summary>My Childhood</summary>
-    	<p>I grew up in Ashtabula Ohio.  I lived near Lake Erie and I really miss the sunsets over the water.</p>> </details>
+    	<p>I grew up in Ashtabula Ohio.  I lived near Lake Erie and I really miss the sunsets over the water.</p></details>
 	  </section>
 
 	  <div>
