Finish week_03. Added a pseudo-classes (.html/.css) and positioning of a elements with CSS through css

--- a/CSS3/pages/blocks.html
+++ b/CSS3/pages/blocks.html
@@ -13,10 +13,12 @@
 			<a class="playfloat" href="../index.html">Artur Voshchanikin</a>
 		</h1>
 		<nav>
-			<a class="playfloat" href="blocks.html">Blocks</a>
+			<a id="active" class="playfloat" href="blocks.html">Blocks</a>
 			<a class="playfloat" href="divblocks.html">Divblocks</a>
 			<a class="playfloat" href="links.html">Links</a>
 			<a class="playfloat" href="#">My new text</a>
+			<a class="playfloat" href="pseudo.html">Pseudo-classes</a>
+			<a class="playfloat" href="positioning.html">Positioning</a>
 		</nav>
 	</header>
 
