--- a/CSS3/pages/divblocks.html
+++ b/CSS3/pages/divblocks.html
@@ -14,9 +14,11 @@
 		</h1>
 		<nav>
 			<a class="playfloat" href="blocks.html">Blocks</a>
-			<a class="playfloat" href="divblocks.html">Divblocks</a>
+			<a id="active" class="playfloat" href="divblocks.html">Divblocks</a>
 			<a class="playfloat" href="links.html">Links</a>
 			<a class="playfloat" href="#">My new text</a>
+			<a class="playfloat" href="pseudo.html">Pseudo-classes</a>
+			<a class="playfloat" href="positioning.html">Positioning</a>
 		</nav>
 	</header>
 	<div>So one of the things you may have noticed as you've been going through other
