--- a/CSS3/pages/links.html
+++ b/CSS3/pages/links.html
@@ -15,8 +15,10 @@
 		<nav>
 			<a class="playfloat" href="blocks.html">Blocks</a>
 			<a class="playfloat" href="divblocks.html">Divblocks</a>
-			<a class="playfloat" href="links.html">Links</a>
+			<a id="active" class="playfloat" href="links.html">Links</a>
 			<a class="playfloat" href="menu.html">Menu</a>
+			<a class="playfloat" href="pseudo.html">Pseudo-classes</a>
+			<a class="playfloat" href="positioning.html">Positioning</a>
 			<a class="arrow" href="#">Continue Reading</a>
 		</nav>
 	</header>
