--- a/CSS3/pages/menu.html
+++ b/CSS3/pages/menu.html
@@ -19,7 +19,9 @@
 				<li><a class="playfloat" href="blocks.html">Blocks</a></li>
 				<li><a class="playfloat" href="divblocks.html">Divblocks</a></li>
 				<li><a class="playfloat" href="links.html">Links</a></li>
-				<li><a class="playfloat" href="menu.html">Menu</a></li>
+				<li><a id="active" class="playfloat" href="menu.html">Menu</a></li>
+				<li><a class="playfloat" href="pseudo.html">Pseudo-classes</a></li>
+				<li><a class="playfloat" href="positioning.html">Positioning</a></li>
 			</ul>
 		</nav>
 	</header>
