--- a/CSS3/index.html
+++ b/CSS3/index.html
@@ -14,6 +14,8 @@
 			<a class="playfloat" href="pages/divblocks.html">divblocks</a>
 			<a class="playfloat" href="pages/links.html">Linkes</a>
 			<a class="playfloat" href="pages/menu.html">Menu</a>
+			<a class="playfloat" href="pages/pseudo.html">Pseudo-classes</a>
+			<a class="playfloat" href="pages/positioning.html">Positioning</a>
 		</nav>
 	</header>
 <main>
