Added Final Project with CSS3. Navbars, table building, work with pseudo-classes

--- a/CSS3/index.html
+++ b/CSS3/index.html
@@ -16,6 +16,9 @@
 			<a class="playfloat" href="pages/menu.html">Menu</a>
 			<a class="playfloat" href="pages/pseudo.html">Pseudo-classes</a>
 			<a class="playfloat" href="pages/positioning.html">Positioning</a>
+			<a href="pages/navbars/navbar01.html">Navbar01</a>
+			<a href="pages/navbars/navbar02.html">Navbar02</a>
+			<a href="pages/navbars/navbar03.html">Navbar03</a>
 		</nav>
 	</header>
 <main>
