--- a/CSS3/pages/blocks.html
+++ b/CSS3/pages/blocks.html
@@ -13,14 +13,16 @@
 			<a class="playfloat" href="../index.html">Artur Voshchanikin</a>
 		</h1>
 		<nav>
-			<a id="active" class="playfloat" href="blocks.html">Blocks</a>
-			<a class="playfloat" href="divblocks.html">Divblocks</a>
-			<a class="playfloat" href="links.html">Links</a>
-			<a class="playfloat" href="#">My new text</a>
+			<a class="playfloat" href="blocks.html">Blocks</a>
+			<a class="playfloat" href="divblocks.html">divblocks</a>
+			<a class="playfloat" href="links.html">Linkes</a>
+			<a class="playfloat" href="menu.html">Menu</a>
 			<a class="playfloat" href="pseudo.html">Pseudo-classes</a>
 			<a class="playfloat" href="positioning.html">Positioning</a>
-		</nav>
-	</header>
+			<a href="navbars/navbar01.html">Navbar01</a>
+			<a href="navbars/navbar02.html">Navbar02</a>
+			<a href="navbars/navbar03.html">Navbar03</a>
+		</nav>	</header>
 
 	<span>Span A</span>
 	<span>Span B</span>
