--- a/CSS3/pages/divblocks.html
+++ b/CSS3/pages/divblocks.html
@@ -14,11 +14,14 @@
 		</h1>
 		<nav>
 			<a class="playfloat" href="blocks.html">Blocks</a>
-			<a id="active" class="playfloat" href="divblocks.html">Divblocks</a>
-			<a class="playfloat" href="links.html">Links</a>
-			<a class="playfloat" href="#">My new text</a>
+			<a class="playfloat" href="divblocks.html">divblocks</a>
+			<a class="playfloat" href="links.html">Linkes</a>
+			<a class="playfloat" href="menu.html">Menu</a>
 			<a class="playfloat" href="pseudo.html">Pseudo-classes</a>
 			<a class="playfloat" href="positioning.html">Positioning</a>
+			<a href="navbars/navbar01.html">Navbar01</a>
+			<a href="navbars/navbar02.html">Navbar02</a>
+			<a href="navbars/navbar03.html">Navbar03</a>
 		</nav>
 	</header>
 	<div>So one of the things you may have noticed as you've been going through other
