--- a/CSS3/pages/menu.html
+++ b/CSS3/pages/menu.html
@@ -22,6 +22,9 @@
 				<li><a id="active" class="playfloat" href="menu.html">Menu</a></li>
 				<li><a class="playfloat" href="pseudo.html">Pseudo-classes</a></li>
 				<li><a class="playfloat" href="positioning.html">Positioning</a></li>
+				<li><a class="playfloat" href="navbars/navbar01.html">Navbar01</li>
+				<li><a class="playfloat" href="navbars/navbar02.html">Navbar02</li>
+				<li><a class="playfloat" href="navbars/navbar03.html">Navbar03</li>
 			</ul>
 		</nav>
 	</header>
