--- a/CSS3/pages/positioning.html
+++ b/CSS3/pages/positioning.html
@@ -19,6 +19,9 @@
 			<a class="playfloat" href="menu.html">Menu</a>
 			<a class="playfloat" href="pseudo.html">Pseudo-classes</a>
 			<a id="active" class="playfloat" href="#">Positioning</a>
+			<a href="navbars/navbar01.html">Navbar01</a>
+			<a href="navbars/navbar02.html">Navbar02</a>
+			<a href="navbars/navbar03.html">Navbar03</a>
 		</nav>
 	</header>
 	<div class="testpseudo">
