Added folder for course Advanced Styling with Responsive Design. Media queries Finished week 2

--- a/AS&RD/index.html
+++ b/AS&RD/index.html
@@ -16,16 +16,16 @@
 			<ul>
 				<li><a class="playfloat" href="#">week #1</a>
 					<ul>
-						<li><a class="active" href="#">Fluid Measurements</a></li>
-						<li><a href="#">Fluid Measurements</a></li>
+						<li><a href="pages/FluidMeasure.html">Fluid Measurements</a></li>
+						<li><a href="pages/FluidMeasureCompl.html">Fluid Measurements(Complited)</a></li>
 						<li><a href="pages/EmAndRem.html">Em and Rem</a></li>
 					</ul>
 				</li>
 				<li><a class="playfloat" href="#">week #2</a>
 					<ul>
-						<li><a href="#">Responsive Navigation</a></li>
+						<li><a href="pages/MediaQ.html">Media Queries</a></li>
+						<li><a href="pages/ResponsiveNav.html">Responsive Navigation</a></li>
 						<li><a href="#">Fluid measurements and media queries</a></li>
-						<li><a href="#">Media Queries</a></li>
 					</ul>
 				</li>
 				<li><a class="playfloat" href="#">week #3</a>
