--- a/AS&RD/pages/EmAndRem.html
+++ b/AS&RD/pages/EmAndRem.html
@@ -4,18 +4,19 @@
 	<meta charset="UTF-8">
 	<title>Artur Voshchanikin</title>
 <!-- 	<link rel="stylesheet" type="text/css" href="../reset.css"> -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/javascript" src="../js/EmAndRem.js"></script>
 	<link rel="stylesheet" type="text/css" href="../assets/stylesheets/EmAndRem.css">
 </head>
 <body>
+	<a href="https://codepen.io/chriscoyier/pen/tvheK"> Original</a>
+
 	<div class="font-size-control">Document font-size control: <input type="range" id="document-font-size-control" min="0.5" max="3.0" step="0.2" value="1.0">
 	</div>
 
 	<div class="page-wrap">
-
 	  <section class="main-content">
-
 	    <article class="module" data-font-size-in-rem="1.2">
 	      <h3>Title of Module</h3>
 	      <time>Aug 5, 2014</time>
@@ -35,9 +36,7 @@
 	    </article>
 
 	  </section>
-
 	  <aside>
-	    
 	    <div class="module" data-font-size-in-rem="0.9">
 	      <h3>Sidebar Thing</h3>
 	      <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam</p>
