Added folder for course Advanced Styling with Responsive Design. Introduction to Twitter Bootstrap 3. Finished week 3

--- a/AS&RD/index.html
+++ b/AS&RD/index.html
@@ -25,12 +25,11 @@
 					<ul>
 						<li><a href="pages/MediaQ.html">Media Queries</a></li>
 						<li><a href="pages/ResponsiveNav.html">Responsive Navigation</a></li>
-						<li><a href="#">Fluid measurements and media queries</a></li>
 					</ul>
 				</li>
 				<li><a class="playfloat" href="#">week #3</a>
 					<ul>
-						<li><a href="#">Fluid Measurements</a></li>
+						<li><a href="pages/bootstrap.html">Bootstrap</a></li>
 						<li><a href="#">navbar</a></li>
 						<li><a href="#">dropdowns</a></li>
 						<li><a href="#">nav-pills</a></li>
