--- a/AS&RD/pages/FluidMeasure.html
+++ b/AS&RD/pages/FluidMeasure.html
@@ -25,13 +25,12 @@
 				<li><a class="playfloat" href="#">week #2</a>
 					<ul>
 						<li><a href="#">Responsive Navigation</a></li>
-						<li><a href="#">Fluid measurements and media queries</a></li>
 						<li><a href="#">Media Queries</a></li>
 					</ul>
 				</li>
 				<li><a class="playfloat" href="#">week #3</a>
 					<ul>
-						<li><a href="#">Fluid Measurements</a></li>
+						<li><a class="active" href="#">Bootstrap</a></li>
 						<li><a href="#">navbar</a></li>
 						<li><a href="#">dropdowns</a></li>
 						<li><a href="#">nav-pills</a></li>
