--- a/AS&RD/pages/MediaQ.html
+++ b/AS&RD/pages/MediaQ.html
@@ -32,13 +32,12 @@
 				<li><a class="playfloat" href="#">week #2</a>
 					<ul>
 						<li><a class="active" href="MediaQ.html">Media Queries</a></li>
-						<li><a href="#">Responsive Navigation</a></li>
-						<li><a href="#">Fluid measurements and media queries</a></li>
+						<li><a href="ResponsiveNav.html">Responsive Navigation</a></li>
 					</ul>
 				</li>
 				<li><a class="playfloat" href="#">week #3</a>
 					<ul>
-						<li><a href="#">Fluid Measurements</a></li>
+						<li><a href="bootstrap.html">Bootstrap</a></li>
 						<li><a href="#">navbar</a></li>
 						<li><a href="#">dropdowns</a></li>
 						<li><a href="#">nav-pills</a></li>
