--- a/AS&RD/pages/ResponsiveNav.html
+++ b/AS&RD/pages/ResponsiveNav.html
@@ -32,12 +32,11 @@
 					<ul>
 						<li><a href="MediaQ.html">Media Queries</a></li>
 						<li><a class="active" href="#">Responsive Navigation</a></li>
-						<li><a href="#">Fluid measurements and media queries</a></li>
 					</ul>
 				</li>
 				<li><a class="playfloat" href="#">week #3</a>
 					<ul>
-						<li><a href="#">Fluid Measurements</a></li>
+						<li><a href="bootstrap.html">Bootstrap</a></li>
 						<li><a href="#">navbar</a></li>
 						<li><a href="#">dropdowns</a></li>
 						<li><a href="#">nav-pills</a></li>
