week 4. Finished course. Done photo gallary

--- a/AS&RD/pages/bootstrap.html
+++ b/AS&RD/pages/bootstrap.html
@@ -88,11 +88,11 @@
 		</div>
 
 		<!-- Every grid consists of: - .conteiner; .row; .col-XX-YY -->
-		<div class="conteiner">
+		<div class="conteiner-fluid">
 			<div class=" row">
 				<img src="../wallpapers/c253601.jpg" alt="cat" class="img-responsive col-sm-3">
 				<img src="../wallpapers/c253739.jpg" alt="cat" class="img-responsive col-sm-3">
-				<img src="../wallpapers/d266885.jpg" alt="dog" class="img-responsive col-sm-3">
+				<img src="../wallpapers/d266885.jpg" alt="dog" class="img-responsive img-circle col-sm-3">
 				<img src="../wallpapers/d203539.jpg" alt="dog" class="img-responsive col-sm-3">
 			</div>
 			<div class="row">
@@ -118,7 +118,21 @@
 				</div>
 			</div>
 		</div>
+		<div class="table-responsive">
+			<table class="table table-bordered table-hover">
+				<tr><th>City</th><th>State</th></tr>
+				<tr class="warning"><td>Ashtabula</td><td>Ohio</td></tr>
+				<tr><td>los Angeles</td><td>California</td></tr>
+				<tr class="success"><td>Fort Myers</td><td>Florida</td></tr>
+				<tr class="danger"><td>Tucson</td><td>Arizona</td></tr>
+				<tr><td>Tusla</td><td>Oklahoma</td><td>Tusla</td><td>Oklahoma</td><td>Tusla</td><td>Oklahoma</td><td>Tusla</td><td>Oklahoma</td></tr>
+			</table>
+		</div>
+		<p>Some content</p>
+		<p>Some content</p>
+		<p>Some content</p>
+		<p>Some content</p>
 	</main>	
-</ul>
+
 </body>
 </html>
