--- a/WD4ECapstone/Final_project/index.html
+++ b/WD4ECapstone/Final_project/index.html
@@ -1,14 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Artur Voshchanikin</title>
-	<link rel="stylesheet" type="text/css" href="reset.css">
-	<link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
-	<script type="text/javascript" src="js/script.js"></script>
+	<meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Zmiev Steeps</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600&display=swap" rel="stylesheet"> 
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
+    <script src="js/scripts.js"></script>
 </head>
 <body>
-	<h1>Here will be my Final project!</h1>
-	<p>You need to wait some time!</p>
+	<nav id="navbar" class="navbar navbar-default">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>                        
+			</button>
+			<a class="navbar-brand" href="#">Zmiev steeps</a>
+	    </div>
+	    <div class="collapse navbar-collapse navbar-right" id="myNavbar">
+			<ul class="nav navbar-nav">
+				<li><a href="#history">History</a></li>
+				<li><a href="#location">Location</a></li>
+				<li><a href="#contact">Contact</a></li>
+				<li><a href="#">About</a></li>
+			</ul>
+	    </div>
+	  </div>
+	</nav>
+
+	<section id="history">
+		<img alt="fst" src="assets/photos/DJI_0013.jpg" />
+		
+	</section>
+	<section id="location">
+		<img alt="fst" src="assets/photos/DJI_0013.jpg" />
+	</section>
+	<section id="contact">
+		<img alt="fst" src="assets/photos/DJI_0013.jpg" />
+	</section>
 </body>
 </html>
+
