Final project. Added google api key, block history

--- a/WD4ECapstone/Final_project/index.html
+++ b/WD4ECapstone/Final_project/index.html
@@ -16,15 +16,14 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 	<!-- Add Google map -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIwzALxUPNbatRBj3Xi1Uhp0fFzwWNBkE&callback=initMap&libraries=&v=weekly"
-      	defer
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPogL_7Wt6HQzyiqNsnrhDM1R9eumA8fc&callback=initMap&libraries=&v=weekly"
+   	defer
     ></script>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <script src="js/scripts.js"></script>
 </head>
 <body>
-	<header>
 	<nav id="navbar" class="navbar navbar-default">
 	  <div class="container-fluid">
 	    <div class="navbar-header">
@@ -41,28 +40,26 @@
 				<li><a href="#history">History</a></li>
 				<li><a href="#location">Location</a></li>
 				<li><a href="#contact">Contact</a></li>
-				<li><a href="#">About</a></li>
+				<li><a href="#about">About</a></li>
 			</ul>
 	    </div>
 	  </div>
 	</nav>
-	</header>
 	<main>
 		<section>
-			<h1>Zmiev steeps</h1>
+			<h1>Zmiev steep</h1>
 			<div class="container" id="addcont">
 				<img src="assets/photos/DJI_0013.jpg" class="img-thumbnail" alt="fst"/>
 				<img src="assets/photos/DJI_0013.jpg" class="img-thumbnail" alt="fst"/>
-			</div>
 			<button class="morecontent" onclick="moreContent()">
 				More images...
 			</button>
+			</div>
 		</section>
 		<section id="history">
-			<div class="imgresize">
-				<img src="assets/photos/DJI_0013.jpg" alt="fst"/>
-			</div>
-			
+			<h2>What a miracle Zmievskie steep?</h2>
+			<p>Undoubtedly, one of the most beautiful places in the Kharkiv region are the Zmievskie slopes, located south of the town of Zmiev. This is a truly unique landscape area for our area. Here, colliding with an obstacle in the form of hills, insurmountable even for such a mighty river, in some places reaching a height of 30 m, of the river Seversky Donets abruptly changes its direction from the southwest to the southeast. At the same time, the view from the observation deck on the top of the hill, as if specially left by nature in order to impress us, opens a truly stunning view of the valley on the other side.</p>
+			<p>Kharkiv romantics call this place "the valley of fogs", lovers of admiring the starry sky, a wonderful natural observatory, numerous bicycle and auto tourists found the Zmievskie steep an ideal place for parking. On the Internet, you can get an amazing feeling, everyone experiences, standing on the edge of a tall hill and watching the majestic landscape unfolding in front of him. Therefore, without postponing the next weekend, with friends or yourself, go there. You will definitely not regret it! Moreover, there are still many interesting places in the vicinity.</p>
 		</section>
 		<section id="location">
 			<div id="map"></div>
@@ -73,7 +70,7 @@
 			</div>
 		</section>
 	</main>
-	<footer>
+	<footer id="about">
 		
 	</footer>
 </body>
