--- a/WD4ECapstone/Final_project/index.html
+++ b/WD4ECapstone/Final_project/index.html
@@ -22,6 +22,8 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <script src="js/scripts.js"></script>
+
+
 </head>
 <body>
 	<nav id="navbar" class="navbar navbar-default">
@@ -65,13 +67,29 @@
 			<div id="map"></div>
 		</section>
 		<section id="contact">
-			<div class="imgresize">
-				<img src="assets/photos/DJI_0013.jpg" alt="fst"/>
+			<div class="container">
+			  <h3>Contact Form</h3>
+			  <form action="#">
+			    <label for="fname">Name</label>
+			    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+			    <label for="email">Email</label>
+			    <input type="email" id="email" name="email" placeholder="your@domain.com">
+
+			    <label for="message">Message</label>
+			    <textarea id="message" name="message" placeholder="Write your message here..."></textarea>
+
+			    <input type="submit" value="Submit">
+			  </form>
 			</div>
 		</section>
 	</main>
 	<footer id="about">
-		
+		<div class="container">
+			<h3>Follow by me</h3>
+			<a href="#" class="fab fa-instagram"></a>			
+			<a href="#" class="fab fa-linkedin"></a>			
+		</div>
 	</footer>
 </body>
 </html>
