Final project. Added Go top button. Changed bgcolors, footer.

--- a/WD4ECapstone/Final_project/index.html
+++ b/WD4ECapstone/Final_project/index.html
@@ -9,7 +9,7 @@
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/912de747fa.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
@@ -35,7 +35,7 @@
 				<span class="icon-bar"></span>                        
 			</button>
 
-			<a class="navbar-brand" href="#">Nature of Zmiev</a>
+			<a class="navbar-brand" href="#home">Nature of Zmiev</a>
 	    </div>
 	    <div class="collapse navbar-collapse navbar-right" id="myNavbar">
 			<ul class="nav navbar-nav">
@@ -69,7 +69,8 @@
 		<section id="contact">
 			<div class="container">
 			  <h3>Contact Form</h3>
-			  <form action="#">
+			  <p style="color:#ffffff; background-color:#981b1e">It's only Front-End. This is have no back-end. </p>
+			  <form action="#" method="POST">
 			    <label for="fname">Name</label>
 			    <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
@@ -87,10 +88,23 @@
 	<footer id="about">
 		<div class="container">
 			<h3>Follow by me</h3>
-			<a href="#" class="fab fa-instagram"></a>			
-			<a href="#" class="fab fa-linkedin"></a>			
+			<a href="https://www.instagram.com/id_nft" target="_blink">
+				<i class="fab fa-instagram fa-2x"></i>
+				Instagram
+			</a>			
+			<a href="https://www.linkedin.com/in/artur-voshchanikin-b593571b9"  target="_blink">
+				<i class="fab fa-linkedin fa-2x"></i>
+				LinkedIn
+			</a>
+			<a href="https://github.com/nosferatum2"  target="_blink">
+				<i class="fab fa-github fa-2x"></i>
+				GitHub
+			</a>
 		</div>
 	</footer>
+	<button onclick="topFunction()" id="goTop" title="Go to top">
+		<i class="fas fa-angle-up fa-2x"></i>
+	</button>
 </body>
 </html>
 
