Final project. Added Description_for_my_project.pdf

--- a/WD4ECapstone/Final_project/index.html
+++ b/WD4ECapstone/Final_project/index.html
@@ -12,10 +12,10 @@
     <!-- Font Awesome icons (free version)-->
     <script src="https://kit.fontawesome.com/912de747fa.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Bootstrap 3 -->
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+	
 	<!-- Add Google map -->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPogL_7Wt6HQzyiqNsnrhDM1R9eumA8fc&callback=initMap&libraries=&v=weekly" defer></script> <!-- defer - for third party scripts --> 
     <!-- Core theme CSS (includes Bootstrap)-->
@@ -168,7 +168,7 @@
 				LinkedIn
 			</a>
 			<a href="https://github.com/nosferatum2"  target="_blank" rel="noopener">
-				<i class="fab fa-github fa-2x"></i>
+				<i class="fab fa-github fa-2x pr-5"></i>
 				GitHub
 			</a>
 			<hr/>
@@ -183,6 +183,10 @@
 	<button onclick="topFunction()" id="goTop" title="Go to top">
 		<i class="fas fa-angle-up fa-2x"></i>
 	</button>
+
+	<!-- Latest compiled and minified JavaScript -->
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 </body>
 </html>
 
